chore: require passing tsc

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "test": "atom --test spec",
     "clean": "shx rm -rf dist modules",
     "babel": "npm run clean && shx cp -r lib dist && cross-env NODE_ENV=development cross-env BABEL_KEEP_MODULES=false babel dist --out-dir dist",
-    "tsc.cjs": "tsc -p ./src/tsconfig.json --outDir dist || echo done",
-    "tsc.es": "tsc --module esnext -p ./src/tsconfig.json --outDir modules || echo done",
+    "tsc.cjs": "tsc -p ./src/tsconfig.json --outDir dist",
+    "tsc.es": "tsc --module esnext -p ./src/tsconfig.json --outDir modules",
     "tsc": "npm run tsc.cjs && npm run tsc.es",
     "dev": "npm run clean && npm run tsc && cross-env NODE_ENV=development cross-env BABEL_KEEP_MODULES=true rollup -c -w",
     "build": "npm run clean && npm run tsc && cross-env NODE_ENV=production cross-env BABEL_KEEP_MODULES=true rollup -c ",
